--- a/aspnetcore/migration/21-to-22.md
+++ b/aspnetcore/migration/21-to-22.md
@@ -4,50 +4,78 @@ author: scottaddie
 description: Cet article décrit les conditions préalables et les étapes courantes pour la migration d’un projet ASP.NET Core 2.1 vers ASP.NET Core 2.2.
 ms.author: scaddie
 ms.custom: mvc
-ms.date: 12/04/2018
+ms.date: 12/08/2018
 uid: migration/21-to-22
-ms.openlocfilehash: bd0626974531b6bd8ba46a2bbd7de79716247576
-ms.sourcegitcommit: a3a15d3ad4d6e160a69614a29c03bbd50db110a2
+ms.openlocfilehash: f95db175d26ed20cc35248ac55b177f5f496203f
+ms.sourcegitcommit: 1872d2e6f299093c78a6795a486929ffb0bbffff
 ms.translationtype: MT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 12/05/2018
-ms.locfileid: "52951977"
+ms.lasthandoff: 12/11/2018
+ms.locfileid: "53216805"
 ---
-# <a name="migrate-from-aspnet-core-21-to-22"></a><span data-ttu-id="bd870-103">Migrer d’ASP.NET Core 2.1 vers 2.2</span><span class="sxs-lookup"><span data-stu-id="bd870-103">Migrate from ASP.NET Core 2.1 to 2.2</span></span>
+# <a name="migrate-from-aspnet-core-21-to-22"></a><span data-ttu-id="188bc-103">Migrer d’ASP.NET Core 2.1 vers 2.2</span><span class="sxs-lookup"><span data-stu-id="188bc-103">Migrate from ASP.NET Core 2.1 to 2.2</span></span>
 
-<span data-ttu-id="bd870-104">Par [Scott Addie](https://github.com/scottaddie)</span><span class="sxs-lookup"><span data-stu-id="bd870-104">By [Scott Addie](https://github.com/scottaddie)</span></span>
+<span data-ttu-id="188bc-104">Par [Scott Addie](https://github.com/scottaddie)</span><span class="sxs-lookup"><span data-stu-id="188bc-104">By [Scott Addie](https://github.com/scottaddie)</span></span>
 
-<span data-ttu-id="bd870-105">Cet article explique comment mettre à jour d’un projet ASP.NET Core 2.1 existant vers ASP.NET Core 2.2.</span><span class="sxs-lookup"><span data-stu-id="bd870-105">This article explains how to update an existing ASP.NET Core 2.1 project to ASP.NET Core 2.2.</span></span>
+<span data-ttu-id="188bc-105">Cet article explique comment mettre à jour d’un projet ASP.NET Core 2.1 existant vers ASP.NET Core 2.2.</span><span class="sxs-lookup"><span data-stu-id="188bc-105">This article explains how to update an existing ASP.NET Core 2.1 project to ASP.NET Core 2.2.</span></span>
 
 [!INCLUDE[](~/includes/net-core-prereqs-all-2.2.md)]
 
-## <a name="update-target-framework-moniker-tfm"></a><span data-ttu-id="bd870-106">Mettre à jour le Moniker du Framework cible</span><span class="sxs-lookup"><span data-stu-id="bd870-106">Update Target Framework Moniker (TFM)</span></span>
+## <a name="update-target-framework-moniker-tfm"></a><span data-ttu-id="188bc-106">Mettre à jour le Moniker du Framework cible</span><span class="sxs-lookup"><span data-stu-id="188bc-106">Update Target Framework Moniker (TFM)</span></span>
 
-<span data-ttu-id="bd870-107">Les projets ciblant .NET Core doivent utiliser le [TFM](/dotnet/standard/frameworks#referring-to-frameworks) d’une version supérieure ou égale à .NET Core 2.2.</span><span class="sxs-lookup"><span data-stu-id="bd870-107">Projects targeting .NET Core should use the [TFM](/dotnet/standard/frameworks#referring-to-frameworks) of a version greater than or equal to .NET Core 2.2.</span></span> <span data-ttu-id="bd870-108">Mise à jour le `<TargetFramework>` texte interne du nœud avec `netcoreapp2.2`:</span><span class="sxs-lookup"><span data-stu-id="bd870-108">Update the `<TargetFramework>` node's inner text with `netcoreapp2.2`:</span></span>
+<span data-ttu-id="188bc-107">Les projets ciblant .NET Core doivent utiliser le [TFM](/dotnet/standard/frameworks#referring-to-frameworks) d’une version supérieure ou égale à .NET Core 2.2.</span><span class="sxs-lookup"><span data-stu-id="188bc-107">Projects targeting .NET Core should use the [TFM](/dotnet/standard/frameworks#referring-to-frameworks) of a version greater than or equal to .NET Core 2.2.</span></span> <span data-ttu-id="188bc-108">Mise à jour le `<TargetFramework>` texte interne du nœud avec `netcoreapp2.2`:</span><span class="sxs-lookup"><span data-stu-id="188bc-108">Update the `<TargetFramework>` node's inner text with `netcoreapp2.2`:</span></span>
 
 ```xml
 <TargetFramework>netcoreapp2.2</TargetFramework>
 ```
 
-<span data-ttu-id="bd870-109">Les projets ciblant .NET Framework peuvent continuer à utiliser le moniker du Framework cible d’une version supérieure ou égale à .NET Framework 4.6.1 :</span><span class="sxs-lookup"><span data-stu-id="bd870-109">Projects targeting .NET Framework may continue to use the TFM of a version greater than or equal to .NET Framework 4.6.1:</span></span>
+<span data-ttu-id="188bc-109">Les projets ciblant .NET Framework peuvent continuer à utiliser le moniker du Framework cible d’une version supérieure ou égale à .NET Framework 4.6.1 :</span><span class="sxs-lookup"><span data-stu-id="188bc-109">Projects targeting .NET Framework may continue to use the TFM of a version greater than or equal to .NET Framework 4.6.1:</span></span>
 
 ```xml
 <TargetFramework>net461</TargetFramework>
 ```
 
-## <a name="adopt-the-iis-in-process-hosting-model"></a><span data-ttu-id="bd870-110">Adopter le modèle d’hébergement intra-processus IIS</span><span class="sxs-lookup"><span data-stu-id="bd870-110">Adopt the IIS in-process hosting model</span></span>
+## <a name="adopt-the-iis-in-process-hosting-model"></a><span data-ttu-id="188bc-110">Adopter le modèle d’hébergement intra-processus IIS</span><span class="sxs-lookup"><span data-stu-id="188bc-110">Adopt the IIS in-process hosting model</span></span>
 
-<span data-ttu-id="bd870-111">Pour adopter le [modèle d’hébergement intra-processus pour IIS](xref:fundamentals/servers/aspnet-core-module#in-process-hosting-model), ajouter le `<AspNetCoreHostingModel>` propriété avec une valeur de `InProcess` à un `<PropertyGroup>` dans le fichier projet :</span><span class="sxs-lookup"><span data-stu-id="bd870-111">To adopt the [in-process hosting model for IIS](xref:fundamentals/servers/aspnet-core-module#in-process-hosting-model), add the `<AspNetCoreHostingModel>` property with a value of `InProcess` to a `<PropertyGroup>` in the project file:</span></span>
+<span data-ttu-id="188bc-111">Pour adopter le [modèle d’hébergement intra-processus pour IIS](xref:fundamentals/servers/aspnet-core-module#in-process-hosting-model), ajouter le `<AspNetCoreHostingModel>` propriété avec une valeur de `InProcess` à un `<PropertyGroup>` dans le fichier projet :</span><span class="sxs-lookup"><span data-stu-id="188bc-111">To adopt the [in-process hosting model for IIS](xref:fundamentals/servers/aspnet-core-module#in-process-hosting-model), add the `<AspNetCoreHostingModel>` property with a value of `InProcess` to a `<PropertyGroup>` in the project file:</span></span>
 
 ```xml
 <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
 ```
 
-<span data-ttu-id="bd870-112">Pour plus d'informations, consultez <xref:host-and-deploy/aspnet-core-module#hosting-model>.</span><span class="sxs-lookup"><span data-stu-id="bd870-112">For more information, see <xref:host-and-deploy/aspnet-core-module#hosting-model>.</span></span>
+<span data-ttu-id="188bc-112">Pour plus d'informations, consultez <xref:host-and-deploy/aspnet-core-module#hosting-model>.</span><span class="sxs-lookup"><span data-stu-id="188bc-112">For more information, see <xref:host-and-deploy/aspnet-core-module#hosting-model>.</span></span>
 
-## <a name="update-net-core-sdk-version-in-globaljson"></a><span data-ttu-id="bd870-113">Mettre à jour la version du SDK .NET Core dans global.json</span><span class="sxs-lookup"><span data-stu-id="bd870-113">Update .NET Core SDK version in global.json</span></span>
+## <a name="update-package-references"></a><span data-ttu-id="188bc-113">Mettre à jour les références de package</span><span class="sxs-lookup"><span data-stu-id="188bc-113">Update package references</span></span>
 
-<span data-ttu-id="bd870-114">Si votre solution s’appuie sur un [global.json](/dotnet/core/tools/global-json) fichier cibler une version du SDK .NET Core spécifique, de mettre à jour son `version` propriété vers la version 2.2 installée sur votre ordinateur :</span><span class="sxs-lookup"><span data-stu-id="bd870-114">If your solution relies upon a [global.json](/dotnet/core/tools/global-json) file to target a specific .NET Core SDK version, update its `version` property to the 2.2 version installed on your machine:</span></span>
+<span data-ttu-id="188bc-114">Si vous ciblez .NET Core, supprimez le `Version` attribut pour la référence de métapackage.</span><span class="sxs-lookup"><span data-stu-id="188bc-114">If targeting .NET Core, remove the `Version` attribute for the metapackage reference.</span></span> <span data-ttu-id="188bc-115">Inclusion d’un `Version` attribut entraîne l’avertissement suivant :</span><span class="sxs-lookup"><span data-stu-id="188bc-115">Inclusion of a `Version` attribute results in the following warning:</span></span>
+
+```console
+A PackageReference to 'Microsoft.AspNetCore.App' specified a Version of `2.2.0`. Specifying the version of this package is not recommended. For more information, see https://aka.ms/sdkimplicitrefs
+```
+
+<span data-ttu-id="188bc-116">La référence métapackage doit ressembler à ce qui suit `<PackageReference />` nœud :</span><span class="sxs-lookup"><span data-stu-id="188bc-116">The metapackage reference should resemble the following `<PackageReference />` node:</span></span>
+
+```xml
+<ItemGroup>
+  <PackageReference Include="Microsoft.AspNetCore.App" />
+</ItemGroup>
+```
+
+<span data-ttu-id="188bc-117">Si vous ciblez .NET Framework, mettre à jour chaque référence de package `Version` attribut 2.2.0 ou ultérieure.</span><span class="sxs-lookup"><span data-stu-id="188bc-117">If targeting .NET Framework, update each package reference's `Version` attribute to 2.2.0 or later.</span></span> <span data-ttu-id="188bc-118">Voici les références de package dans un projet ASP.NET Core 2.2 classique qui ciblent .NET Framework :</span><span class="sxs-lookup"><span data-stu-id="188bc-118">Here are the package references in a typical ASP.NET Core 2.2 project targeting .NET Framework:</span></span>
+
+```xml
+<ItemGroup>
+  <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0" />
+  <PackageReference Include="Microsoft.AspNetCore.CookiePolicy" Version="2.2.0" />
+  <PackageReference Include="Microsoft.AspNetCore.HttpsPolicy" Version="2.2.0" />
+  <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
+  <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.2.0" />
+</ItemGroup>
+```
+
+## <a name="update-net-core-sdk-version-in-globaljson"></a><span data-ttu-id="188bc-119">Mettre à jour la version du SDK .NET Core dans global.json</span><span class="sxs-lookup"><span data-stu-id="188bc-119">Update .NET Core SDK version in global.json</span></span>
+
+<span data-ttu-id="188bc-120">Si votre solution s’appuie sur un [global.json](/dotnet/core/tools/global-json) fichier cibler une version du SDK .NET Core spécifique, de mettre à jour son `version` propriété vers la version 2.2 installée sur votre ordinateur :</span><span class="sxs-lookup"><span data-stu-id="188bc-120">If your solution relies upon a [global.json](/dotnet/core/tools/global-json) file to target a specific .NET Core SDK version, update its `version` property to the 2.2 version installed on your machine:</span></span>
 
 ```json
 {
@@ -57,56 +85,44 @@ ms.locfileid: "52951977"
 }
 ```
 
-## <a name="update-package-references"></a><span data-ttu-id="bd870-115">Mettre à jour les références de package</span><span class="sxs-lookup"><span data-stu-id="bd870-115">Update package references</span></span>
+## <a name="call-configurekestrel-instead-of-usekestrel"></a><span data-ttu-id="188bc-121">Appelez ConfigureKestrel au lieu de UseKestrel</span><span class="sxs-lookup"><span data-stu-id="188bc-121">Call ConfigureKestrel instead of UseKestrel</span></span>
 
-<span data-ttu-id="bd870-116">Si vous ciblez .NET Core, supprimez le `Version` attribut pour la référence de métapackage.</span><span class="sxs-lookup"><span data-stu-id="bd870-116">If targeting .NET Core, remove the `Version` attribute for the metapackage reference.</span></span> <span data-ttu-id="bd870-117">Inclusion d’un `Version` attribut entraîne l’avertissement suivant :</span><span class="sxs-lookup"><span data-stu-id="bd870-117">Inclusion of a `Version` attribute results in the following warning:</span></span>
+<span data-ttu-id="188bc-122">Si l’application appelle <xref:Microsoft.AspNetCore.Hosting.WebHostBuilderKestrelExtensions.UseKestrel*> dans le `CreateWebHostBuilder` méthode de la `Program` classe, appelez `ConfigureKestrel` à la place pour éviter les conflits avec la [IIS dans le processus modèle d’hébergement](xref:fundamentals/servers/aspnet-core-module#in-process-hosting-model):</span><span class="sxs-lookup"><span data-stu-id="188bc-122">If the app calls <xref:Microsoft.AspNetCore.Hosting.WebHostBuilderKestrelExtensions.UseKestrel*> in the `CreateWebHostBuilder` method of the `Program` class, call `ConfigureKestrel` instead to avoid conflicts with the [IIS in-process hosting model](xref:fundamentals/servers/aspnet-core-module#in-process-hosting-model):</span></span>
 
-```console
-A PackageReference to 'Microsoft.AspNetCore.App' specified a Version of `2.2.0`. Specifying the version of this package is not recommended. For more information, see https://aka.ms/sdkimplicitrefs
+```csharp
+public static IWebHostBuilder CreateWebHostBuilder(string[] args) =>
+    WebHost.CreateDefaultBuilder(args)
+        .UseStartup<Startup>()
+        .ConfigureKestrel((context, options) =>
+        {
+            // Set properties and call methods on options
+        });
 ```
 
-<span data-ttu-id="bd870-118">La référence métapackage doit ressembler à ce qui suit `<PackageReference />` nœud :</span><span class="sxs-lookup"><span data-stu-id="bd870-118">The metapackage reference should resemble the following `<PackageReference />` node:</span></span>
+<span data-ttu-id="188bc-123">Pour plus d'informations, consultez <xref:fundamentals/servers/kestrel#how-to-use-kestrel-in-aspnet-core-apps>.</span><span class="sxs-lookup"><span data-stu-id="188bc-123">For more information, see <xref:fundamentals/servers/kestrel#how-to-use-kestrel-in-aspnet-core-apps>.</span></span>
 
-```xml
-<ItemGroup>
-  <PackageReference Include="Microsoft.AspNetCore.App" />
-</ItemGroup>
-```
+## <a name="update-compatibility-version"></a><span data-ttu-id="188bc-124">Version de compatibilité de mise à jour</span><span class="sxs-lookup"><span data-stu-id="188bc-124">Update compatibility version</span></span>
 
-<span data-ttu-id="bd870-119">Si vous ciblez .NET Framework, mettre à jour chaque référence de package `Version` attribut 2.2.0 ou ultérieure.</span><span class="sxs-lookup"><span data-stu-id="bd870-119">If targeting .NET Framework, update each package reference's `Version` attribute to 2.2.0 or later.</span></span> <span data-ttu-id="bd870-120">Voici les références de package dans un projet ASP.NET Core 2.2 classique qui ciblent .NET Framework :</span><span class="sxs-lookup"><span data-stu-id="bd870-120">Here are the package references in a typical ASP.NET Core 2.2 project targeting .NET Framework:</span></span>
-
-```xml
-<ItemGroup>
-  <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0" />
-  <PackageReference Include="Microsoft.AspNetCore.CookiePolicy" Version="2.2.0" />
-  <PackageReference Include="Microsoft.AspNetCore.HttpsPolicy" Version="2.2.0"/>
-  <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
-  <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.2.0" />
-</ItemGroup>
-```
-
-## <a name="update-compatibility-version"></a><span data-ttu-id="bd870-121">Version de compatibilité de mise à jour</span><span class="sxs-lookup"><span data-stu-id="bd870-121">Update compatibility version</span></span>
-
-<span data-ttu-id="bd870-122">Mettre à jour la version de compatibilité dans `Startup.ConfigureServices` à `Version_2_2`:</span><span class="sxs-lookup"><span data-stu-id="bd870-122">Update the compatibility version in `Startup.ConfigureServices` to `Version_2_2`:</span></span>
+<span data-ttu-id="188bc-125">Mettre à jour la version de compatibilité dans `Startup.ConfigureServices` à `Version_2_2`:</span><span class="sxs-lookup"><span data-stu-id="188bc-125">Update the compatibility version in `Startup.ConfigureServices` to `Version_2_2`:</span></span>
 
 ```csharp
 services.AddMvc()
         .SetCompatibilityVersion(CompatibilityVersion.Version_2_2);
 ```
 
-## <a name="update-docker-images"></a><span data-ttu-id="bd870-123">Mettre à jour des images Docker</span><span class="sxs-lookup"><span data-stu-id="bd870-123">Update Docker images</span></span>
+## <a name="update-docker-images"></a><span data-ttu-id="188bc-126">Mettre à jour des images Docker</span><span class="sxs-lookup"><span data-stu-id="188bc-126">Update Docker images</span></span>
 
-<span data-ttu-id="bd870-124">Le tableau suivant montre l’image Docker de modifications de la balise :</span><span class="sxs-lookup"><span data-stu-id="bd870-124">The following table shows the Docker image tag changes:</span></span>
+<span data-ttu-id="188bc-127">Le tableau suivant montre l’image Docker de modifications de la balise :</span><span class="sxs-lookup"><span data-stu-id="188bc-127">The following table shows the Docker image tag changes:</span></span>
 
-|<span data-ttu-id="bd870-125">2.1</span><span class="sxs-lookup"><span data-stu-id="bd870-125">2.1</span></span>                                       |<span data-ttu-id="bd870-126">2.2</span><span class="sxs-lookup"><span data-stu-id="bd870-126">2.2</span></span>                                       |
-|------------------------------------------|------------------------------------------|
-|`microsoft/dotnet:2.1-aspnetcore-runtime` |`microsoft/dotnet:2.2-aspnetcore-runtime` |
-|`microsoft/dotnet:2.1-sdk`                |`microsoft/dotnet:2.2-sdk`                |
+| <span data-ttu-id="188bc-128">2.1</span><span class="sxs-lookup"><span data-stu-id="188bc-128">2.1</span></span>                                       | <span data-ttu-id="188bc-129">2.2</span><span class="sxs-lookup"><span data-stu-id="188bc-129">2.2</span></span>                                       |
+| ----------------------------------------- | ----------------------------------------- |
+| `microsoft/dotnet:2.1-aspnetcore-runtime` | `microsoft/dotnet:2.2-aspnetcore-runtime` |
+| `microsoft/dotnet:2.1-sdk`                | `microsoft/dotnet:2.2-sdk`                |
 
-<span data-ttu-id="bd870-127">Modifier le `FROM` lignes dans votre *Dockerfile* à utiliser les nouvelles balises d’image dans la colonne 2.2 de la table précédente.</span><span class="sxs-lookup"><span data-stu-id="bd870-127">Change the `FROM` lines in your *Dockerfile* to use the new image tags in the preceding table's 2.2 column.</span></span>
+<span data-ttu-id="188bc-130">Modifier le `FROM` lignes dans votre *Dockerfile* à utiliser les nouvelles balises d’image dans la colonne 2.2 de la table précédente.</span><span class="sxs-lookup"><span data-stu-id="188bc-130">Change the `FROM` lines in your *Dockerfile* to use the new image tags in the preceding table's 2.2 column.</span></span>
 
-## <a name="additional-resources"></a><span data-ttu-id="bd870-128">Ressources supplémentaires</span><span class="sxs-lookup"><span data-stu-id="bd870-128">Additional resources</span></span>
+## <a name="additional-resources"></a><span data-ttu-id="188bc-131">Ressources supplémentaires</span><span class="sxs-lookup"><span data-stu-id="188bc-131">Additional resources</span></span>
 
 * <xref:mvc/compatibility-version>
 * <xref:fundamentals/metapackage-app>
-* [<span data-ttu-id="bd870-129">Références de package implicites</span><span class="sxs-lookup"><span data-stu-id="bd870-129">Implicit package references</span></span>](/dotnet/core/tools/csproj#implicit-package-references)
+* [<span data-ttu-id="188bc-132">Références de package implicites</span><span class="sxs-lookup"><span data-stu-id="188bc-132">Implicit package references</span></span>](/dotnet/core/tools/csproj#implicit-package-references)
