--- a/aspnetcore/migration/21-to-22.md
+++ b/aspnetcore/migration/21-to-22.md
@@ -4,14 +4,14 @@ author: scottaddie
 description: Cet article décrit les conditions préalables et les étapes courantes pour la migration d’un projet ASP.NET Core 2.1 vers ASP.NET Core 2.2.
 ms.author: scaddie
 ms.custom: mvc
-ms.date: 12/08/2018
+ms.date: 12/11/2018
 uid: migration/21-to-22
-ms.openlocfilehash: f95db175d26ed20cc35248ac55b177f5f496203f
-ms.sourcegitcommit: 1872d2e6f299093c78a6795a486929ffb0bbffff
+ms.openlocfilehash: 09602667098592814c0bf41852f64e9a32202b27
+ms.sourcegitcommit: b34b25da2ab68e6495b2460ff570468f16a9bf0d
 ms.translationtype: MT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 12/11/2018
-ms.locfileid: "53216805"
+ms.lasthandoff: 12/12/2018
+ms.locfileid: "53284550"
 ---
 # <a name="migrate-from-aspnet-core-21-to-22"></a>Migrer d’ASP.NET Core 2.1 vers 2.2
 
@@ -110,6 +110,15 @@ services.AddMvc()
         .SetCompatibilityVersion(CompatibilityVersion.Version_2_2);
 ```
 
+## <a name="update-cors-policy"></a>Mettre à jour la stratégie CORS
+
+Dans ASP.NET Core 2.2, l’intergiciel (middleware) CORS répond avec une origine de caractère générique (`*`) si une stratégie autorise toute origine et informations d’identification. Informations d’identification ne sont pas pris en charge lors d’une origine de caractère générique (`*`) est spécifié, et les navigateurs interdira la demande CORS. Pour plus d’informations, notamment des options permettant de corriger le problème sur le client, consultez le [docs de web MDN](https://developer.mozilla.org/docs/Web/HTTP/CORS/Errors/CORSNotSupportingCredentials).
+
+Pour corriger ce problème sur le serveur, effectuez l’une des actions suivantes :
+
+* Modifier la stratégie CORS pour ne plus autoriser les informations d’identification. Autrement dit, supprimez l’appel à <xref:Microsoft.AspNetCore.Cors.Infrastructure.CorsPolicyBuilder.AllowCredentials*> lors de la configuration de la stratégie.
+* Si les informations d’identification sont requises pour la demande CORS réussisse, modifiez la stratégie pour spécifier les hôtes autorisés. Par exemple, utilisez `builder.WithOrigins("https://api.example1.com", "https://example2.com")` au lieu d’utiliser <xref:Microsoft.AspNetCore.Cors.Infrastructure.CorsPolicyBuilder.AllowAnyOrigin*>.
+
 ## <a name="update-docker-images"></a>Mettre à jour des images Docker
 
 Le tableau suivant montre l’image Docker de modifications de la balise :
@@ -120,6 +129,10 @@ Le tableau suivant montre l’image Docker de modifications de la balise :
 | `microsoft/dotnet:2.1-sdk`                | `microsoft/dotnet:2.2-sdk`                |
 
 Modifier le `FROM` lignes dans votre *Dockerfile* à utiliser les nouvelles balises d’image dans la colonne 2.2 de la table précédente.
+
+## <a name="build-manually-in-visual-studio-when-using-iis-in-process-hosting"></a>Créer manuellement dans Visual Studio lorsque vous utilisez IIS dans le processus d’hébergement
+
+De Visual Studio **la génération automatique de demande de navigateur** expérience ne fonctionne pas avec le [IIS dans le processus modèle d’hébergement](xref:fundamentals/servers/aspnet-core-module#in-process-hosting-model). Vous devez manuellement regénérer le projet lors de l’utilisation dans le processus d’hébergement. Améliorations apportées à cette expérience sont prévues pour une future version de Visual Studio.
 
 ## <a name="additional-resources"></a>Ressources supplémentaires
 
